--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "nodemon": "^3.1.4",
     "register-service-worker": "^1.7.2",
