--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "nodemon": "^3.1.4",
+    "normalize.css": "^8.0.1",
     "register-service-worker": "^1.7.2",
     "sweetalert": "^2.1.2",
     "vue": "^3.2.13",
